--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="MenuBar">
-            <button> Steun ons! </button>
+        <div class="MenuBar shadow">
+            <div class="menuHolder">
+                <button> Volg ons! </button>
+                <button> Steun ons! </button>
+            </div>
         </div>
         <div class="content">
         <header>
             <div id="imgHolder">
-                <img src="afbeeldingen/zusjes.jpg" alt="FOTO ZUSJES"/>
+                <img class = "shadow" src="afbeeldingen/zusjes.jpg" alt="FOTO ZUSJES"/>
             </div>
             <div id="headerHolder">
                 <h1>De Zusjes </h1>
