--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
     </head>
     <body>
         <div class="MenuBar shadow">
-            <div class="menuHolder">
-                <button> Volg ons! </button>
-                <button> Steun ons! </button>
+            <div class="listHolder">
+                <ul>
+                    <li>  <a href="#"> Volg ons! </a> </li>
+                    <li>  <a href ="#"> Steun ons! </a></li>
+                </ul>
             </div>
         </div>
         <div class="content">
-        <header>
-            <div id="imgHolder">
-                <img class = "shadow" src="afbeeldingen/zusjes.jpg" alt="FOTO ZUSJES"/>
-            </div>
-            <div id="headerHolder">
-                <h1>De Zusjes </h1>
-            <h2>Bornem</h2>
-            <h3>11-12/08/2017</h3>
-            </div>
-        </header>
+            <section class="card shadow">
+                <div id="imgHolder">
+                    <img src="afbeeldingen/zusjes.jpg" alt="FOTO ZUSJES"/>
+                </div>
+                <div id="headerHolder">
+                    <h1>De Zusjes </h1>
+                    <h2>Bornem</h2>
+                    <h3>11 en 12 augustus 2017</h3>
+                </div>
+            </section>
         </div>
     </body>
 </html>
