--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div class="MenuBar shadow">
             <div class="listHolder">
+                <p> Kevins walk </p>
                 <ul>
                     <li>  <a href="#"> Volg ons! </a> </li>
                     <li>  <a href ="#"> Steun ons! </a></li>
