fixed navigationbug with menu

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             </ul>
         </div>
     </div>
+
     <div class="content">
-        <section class="card shadow" id="zusjes">
+        <div class="anker" id="zusjes"></div>
+        <section class="card shadow">
             <div id="imgHolder">
                 <img src="afbeeldingen/zusjes.jpg" alt="FOTO ZUSJES" />
             </div>
@@ -31,7 +33,8 @@
             </div>
         </section>
 
-        <section class="card shadow" id="makeawish">
+        <div class="anker" id="makeawish"></div>
+        <section class="card shadow">
             <div class="textHolder">
                 <h1> Make a wish? </h1>
                 <p> Make-A-Wish® vervult de hartenwens van kinderen die vechten tegen een levensbedreigende ziekte om hoop, sterkte en vreugde te brengen. </p>
@@ -41,8 +44,8 @@
                 <a href="http://www.makeawish.be/over-ons"> <img src="afbeeldingen/makeAWish.gif" alt="Make a wish" /></a>
             </div>
         </section>
-
-        <section class="card shadow" id="volg">
+        <div class="anker" id="volg"></div>
+        <section class="card shadow">
             <div class="titleHolder">
                 <h1>Volg ons!</h1>
             </div>
