diffrent collor pallette

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
                 <iframe src="https://webapp.dodentocht.be/"></iframe>
             </div>
         </section>
+
+        <div class="anker" id="steun"></div>
+        <section class="card shadow">
+            <div class="titleHolder">
+                <h1>Steun ons!</h1>
+            </div>
+            <div class="uitlegHolder">
+                <p>Je kan ons steunen door te storten naar BE83 4093 0351 0115 met vermelding KevinsWalk. Bij een bedrag van €40 of meer krijg je een fiscaal attest.</p>
+            </div>
+        </section>
     </div>
 </body>
 
