added sponsors to the site

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -15,7 +16,7 @@
             <ul>
                 <li> <a href="#makeawish"> Make a wish?</a> </li>
                 <li> <a href="#volg"> Volg ons! </a> </li>
-                <li> <a href="#"> Steun ons! </a> </li>
+                <li> <a href="#steun"> Steun ons! </a> </li>
             </ul>
         </div>
     </div>
@@ -65,6 +66,11 @@
             <div class="uitlegHolder">
                 <p>Je kan ons steunen door te storten naar BE83 4093 0351 0115 met vermelding KevinsWalk. Bij een bedrag van €40 of meer krijg je een fiscaal attest.</p>
             </div>
+        </section>
+
+        <section class="sponsors">
+            <p> Met dank aan </p>
+            <a href="http://www.navs.be/"> <img src="afbeeldingen/navs.png" alt="NAVS.BE" /> </a>
         </section>
     </div>
 </body>
