Made site mobile friendly

--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+   <!-- <link href="css/style.css" rel="stylesheet"> -->
+    <link href="css/mobile.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="MenuBar shadow">
-        <div class="listHolder">
-            <a href="#zusjes" id="title"> Kevins walk </a>
-            <ul>
+    <nav class="MenuBar shadow">
+        <div class="nav__size__holder">
+             <ul class="nav__left">
+                <li><a href="#zusjes" id="title"> Kevins walk </a></li>
+            </ul>
+            <div class="material-icons">menu</div>
+            <ul class="nav__right">
                 <li> <a href="#makeawish"> Make a wish?</a> </li>
                 <li> <a href="#volg"> Volg ons! </a> </li>
                 <li> <a href="#steun"> Steun ons! </a> </li>
             </ul>
         </div>
-    </div>
+    </nav>
 
     <div class="content">
         <div class="anker" id="zusjes"></div>
