made the mobile menu animated

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <!-- <link href="css/style.css" rel="stylesheet"> -->
     <link href="css/mobile.css" rel="stylesheet">
+    <script src="javascript/menu.js" defer>
+    </script>
 </head>
 
 <body>
-    <nav class="MenuBar shadow">
+    <nav class="shadow nav">
         <div class="nav__size__holder">
              <ul class="nav__left">
                 <li><a href="#zusjes" id="title"> Kevins walk </a></li>
