made site better for desktop

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Kevins walk</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <link rel="icon" href="afbeeldingen/schoen.png" type="image/gif" sizes="16x16">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-   <!-- <link href="css/style.css" rel="stylesheet"> -->
     <link href="css/mobile.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <script src="javascript/menu.js" defer>
     </script>
 </head>
@@ -40,6 +41,10 @@
                 <h2>Bornem</h2>
                 <h3>11 en 12 augustus 2017</h3>
             </div>
+            <div class="zusTextHolder">
+                <p> Wij (Christel en Ingrid) wandelen voor de derde maal de dodentocht. Deze editie willen we er graag een sponsoring aan koppelen waarvan de opbrengst integraal naar Make a Wish gaat. Dit gaat ter 
+                    nagedachtenis van Kevin Schrauwen. Kevin heeft jarenlang moeten vechten voor zijn leven en dankzij Make a Wish heeft hij zijn laatste wens in vervulling zien gaan. 
+            </div>
         </section>
 
         <div class="anker" id="makeawish"></div>
@@ -50,9 +55,10 @@
                 <p> Voor meer uitleg kan je op de afbeelding klikken. </p>
             </div>
             <div class="imgHolder">
-                <a href="http://www.makeawish.be/over-ons"> <img src="afbeeldingen/makeAWish.gif" alt="Make a wish" /></a>
+                <a href="http://www.makeawish.be/over-ons" target="_blank"> <img src="afbeeldingen/makeAWish.gif" alt="Make a wish" /></a>
             </div>
         </section>
+
         <div class="anker" id="volg"></div>
         <section class="card shadow">
             <div class="titleHolder">
@@ -77,8 +83,10 @@
         </section>
 
         <section class="sponsors">
-            <p> Met dank aan </p>
-            <a href="http://www.navs.be/"> <img src="afbeeldingen/navs.png" alt="NAVS.BE" /> </a>
+            <div class="sponsorHolder">
+                <p> Met dank aan: </p>
+                <a href="http://www.navs.be/" target="_blank"> <img src="afbeeldingen/navs.png" alt="NAVS.BE" /> </a>
+            </div>
         </section>
     </div>
 </body>
