added a photo of Kevin

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
                 <h2>Bornem</h2>
                 <h3>11 en 12 augustus 2017</h3>
             </div>
+            <div id="kevHolder">
+                <img src="afbeeldingen/kev.jpg" alt="FOTO KEVIN">
+            </div>
             <div class="zusTextHolder">
                 <p> Wij (Christel en Ingrid) wandelen voor de derde maal de dodentocht. Deze editie willen we er graag een sponsoring aan koppelen waarvan de opbrengst integraal naar Make a Wish gaat. Dit gaat ter 
                     nagedachtenis van Kevin Schrauwen. Kevin heeft jarenlang moeten vechten voor zijn leven en dankzij Make a Wish heeft hij zijn laatste wens in vervulling zien gaan. 
+                </p>
             </div>
         </section>
 
@@ -65,7 +69,7 @@
                 <h1>Volg ons!</h1>
             </div>
             <div class="uitlegHolder">
-                <p>Je kan de wandelaars volgen door op het hamburgermenu te klikken en bij wandelaars Christel of Ingrid Jacobs in te typen.</p>
+                <p>Je kan de wandelaars volgen door op <span class="material-icons">menu</span> te klikken en bij wandelaars Christel of Ingrid Jacobs in te typen.</p>
             </div>
             <div class="iframeHolder">
                 <iframe src="https://webapp.dodentocht.be/"></iframe>
