added flexbox support for older browsers

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="anker" id="zusjes"></div>
         <section class="card shadow">
             <div id="imgHolder">
-                <img src="afbeeldingen/zusjes.jpg" alt="FOTO ZUSJES" />
+                <img src="afbeeldingen/zusjes.JPG" alt="FOTO ZUSJES" />
             </div>
             <div id="headerHolder">
                 <h1>De Zusjes </h1>
@@ -59,7 +59,7 @@
                 <p> Voor meer uitleg kan je op de afbeelding klikken. </p>
             </div>
             <div class="imgHolder">
-                <a href="http://www.makeawish.be/over-ons" target="_blank"> <img src="afbeeldingen/makeAWish.gif" alt="Make a wish" /></a>
+                <a href="http://www.makeawish.be/over-ons" target="_blank"> <img src="afbeeldingen/makeAWish.png" alt="Make a wish" /></a>
             </div>
         </section>
 
@@ -82,7 +82,7 @@
                 <h1>Steun ons!</h1>
             </div>
             <div class="uitlegHolder">
-                <p>Je kan ons steunen door te storten naar BE83 4093 0351 0115 met vermelding KevinsWalk. Bij een bedrag van €40 of meer krijg je een fiscaal attest.</p>
+                <p>Je kan ons steunen door te storten naar het rekeningnummer van Make a Wish <span> BE83 4093 0351 0115 </span> met vermelding <span> Kevins Walk </span>. Bij een bedrag van €40 of meer krijg je een fiscaal attest.</p>
             </div>
         </section>
 
