changed the conten holder to display block for bugfix in safari

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>Kevins walk</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link rel="icon" href="afbeeldingen/schoen.png" type="image/gif" sizes="16x16">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="afbeeldingen/schoen.png" type="image/gif" sizes="16x16">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="css/mobile.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -18,7 +17,7 @@
 <body>
     <nav class="shadow nav">
         <div class="nav__size__holder">
-             <ul class="nav__left">
+            <ul class="nav__left">
                 <li><a href="#zusjes" id="title"> Kevins walk </a></li>
             </ul>
             <div class="material-icons">menu</div>
@@ -45,8 +44,8 @@
                 <img src="afbeeldingen/kev.jpg" alt="FOTO KEVIN">
             </div>
             <div class="zusTextHolder">
-                <p> Wij (Christel en Ingrid) wandelen voor de derde maal de dodentocht. Deze editie willen we er graag een sponsoring aan koppelen waarvan de opbrengst integraal naar Make a Wish gaat. Dit gaat ter 
-                    nagedachtenis van Kevin Schrauwen. Kevin heeft jarenlang moeten vechten voor zijn leven en dankzij Make a Wish heeft hij zijn laatste wens in vervulling zien gaan. 
+                <p> Wij (Christel en Ingrid) wandelen voor de derde maal de dodentocht. Deze editie willen we er graag een sponsoring aan koppelen waarvan de opbrengst integraal naar Make a Wish gaat. Dit gaat ter nagedachtenis van Kevin Schrauwen. Kevin
+                    heeft jarenlang moeten vechten voor zijn leven en heeft dankzij Make a Wish zijn laatste wens in vervulling zien gaan.
                 </p>
             </div>
         </section>
@@ -85,14 +84,13 @@
                 <p>Je kan ons steunen door te storten naar het rekeningnummer van Make a Wish <span> BE83 4093 0351 0115 </span> met vermelding <span> Kevins Walk </span>. Bij een bedrag van €40 of meer krijg je een fiscaal attest.</p>
             </div>
         </section>
-
-        <section class="sponsors">
-            <div class="sponsorHolder">
-                <p> Met dank aan: </p>
-                <a href="http://www.navs.be/" target="_blank"> <img src="afbeeldingen/navs.png" alt="NAVS.BE" /> </a>
-            </div>
-        </section>
     </div>
+    <section class="sponsors">
+        <div class="sponsorHolder">
+            <p> Met dank aan: </p>
+            <a href="http://www.navs.be/" target="_blank"> <img src="afbeeldingen/navs.png" alt="NAVS.BE" /> </a>
+        </div>
+    </section>
 </body>
 
 </html>
